--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.NgobrolKuy"
         tools:targetApi="31">
         <activity
+            android:name=".Setting"
+            android:exported="false" />
+        <activity
+            android:name=".PersonalChat"
+            android:exported="false" />
+        <activity
+            android:name=".HomeChat"
+            android:exported="false" />
+        <activity
+            android:name=".EmailCheck"
+            android:exported="false" />
+        <activity
+            android:name=".ForgetPassword"
+            android:exported="false" />
+        <activity
             android:name=".ProfilePicActivity"
             android:exported="false" />
         <activity
